Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48763

Slow repaint under Mac OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.3, 5.14.0 Alpha
    • 5.5.0, 5.11.3, 5.12
    • None
    • Hardware:
      iMac - All In One PC - 5120×2880 LED IPS, Intel Quad Core i7 4.0GHz Haswell, RAM 16GB DDR3, AMD Radeon R9 M290X 2GB GDDR5, 1TB Fusion Drive
    • macOS
    • 77a4915bf900aac0c96260018c0a4ccfbdd7c094 (qt/qtbase/5.12)

      Please see the project attached. It's a simple program that repeatedly repaints a widget with single line. Then see this video: https://youtu.be/dHivEP4bJmI. It shows how the framerate of the repainting changes depending on window size on Mac OS X.

      When I compared the performance on Windows 10 and Mac OS X I got these values (on the same hardware):

      Widget size | Fps Mac | Fps Win10
      800x600 | 350 | 622
      1600x600 | 80 | 570
      2560x1300 | 20 | 250
      3840x2035 | n/a | 117

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            PetrM Petr Macháček
            Votes:
            5 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes